--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -35,7 +35,7 @@ code_word_wrap: false
 copy:
   enable: true
   copyright:
-    enable: true
+    enable: false
     limit_count: 50
 
 # social settings (社交圖標設置)
