--- a/package.json
+++ b/package.json
@@ -16,14 +16,21 @@
     "hexo-algolia": "^1.3.2",
     "hexo-asset-image": "^1.0.0",
     "hexo-deployer-git": "^3.0.0",
+    "hexo-deployer-heroku": "^0.1.2",
+    "hexo-deployer-openshift": "^0.1.2",
+    "hexo-deployer-rsync": "^1.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
+    "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^2.0.0",
+    "hexo-generator-search": "^2.4.3",
+    "hexo-generator-searchdb": "^1.3.4",
+    "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-marked": "^4.0.0",
+    "hexo-renderer-marked": "^0.2.11",
     "hexo-renderer-pug": "^1.0.0",
-    "hexo-renderer-stylus": "^2.0.1",
+    "hexo-renderer-stylus": "^0.2.3",
     "hexo-renderer-swig": "^1.1.0",
     "hexo-server": "^2.0.0",
     "hexo-theme-landscape": "^0.0.3",
