--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-search": "^2.4.3",
     "hexo-generator-searchdb": "^1.3.4",
-    "hexo-generator-sitemap": "^1.2.0",
+    "hexo-generator-sitemap": "^2.1.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-marked": "^0.2.11",
-    "hexo-renderer-pug": "^1.0.0",
-    "hexo-renderer-stylus": "^0.2.3",
+    "hexo-renderer-kramed": "^0.1.4",
+    "hexo-renderer-pug": "^2.0.0",
+    "hexo-renderer-stylus": "^2.0.1",
     "hexo-renderer-swig": "^1.1.0",
     "hexo-server": "^2.0.0",
     "hexo-theme-landscape": "^0.0.3",
